[gd_scene load_steps=11 format=3 uid="uid://d0y0kfcxgf836"]

[ext_resource type="PackedScene" uid="uid://bwrsxtrpsknue" path="res://player/Player.tscn" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cdoipsqrmx5nb" path="res://Base.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Spawn.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://c6c508d52x61d" path="res://bg_grass.png" id="5"]
[ext_resource type="AudioStream" uid="uid://b3iqni4nr3a8u" path="res://sfx/bass_drop.wav" id="6"]
[ext_resource type="PackedScene" uid="uid://bne88k2yuegt5" path="res://UI.tscn" id="7"]

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Wave:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Wave:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="Animation" id="1"]
resource_name = "next_wave"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Wave:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Wave:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtkw0"]
_data = {
"RESET": SubResource("2"),
"next_wave": SubResource("1")
}

[node name="Main" type="Node2D"]
script = ExtResource("2")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("5")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1024, 600)

[node name="Base" parent="." instance=ExtResource("3")]
position = Vector2(512, 560)

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(512, 448)

[node name="Spawns" type="Node2D" parent="."]
position = Vector2(512, 448)

[node name="Spawn" parent="Spawns" instance=ExtResource("4")]
position = Vector2(-448, -472)

[node name="Spawn2" parent="Spawns" instance=ExtResource("4")]
position = Vector2(-384, -472)

[node name="Spawn3" parent="Spawns" instance=ExtResource("4")]
position = Vector2(-320, -472)

[node name="Spawn4" parent="Spawns" instance=ExtResource("4")]
position = Vector2(-256, -472)

[node name="Spawn5" parent="Spawns" instance=ExtResource("4")]
position = Vector2(-192, -472)

[node name="Spawn6" parent="Spawns" instance=ExtResource("4")]
position = Vector2(-128, -472)

[node name="Spawn7" parent="Spawns" instance=ExtResource("4")]
position = Vector2(-64, -472)

[node name="Spawn8" parent="Spawns" instance=ExtResource("4")]
position = Vector2(0, -472)

[node name="Spawn9" parent="Spawns" instance=ExtResource("4")]
position = Vector2(64, -472)

[node name="Spawn10" parent="Spawns" instance=ExtResource("4")]
position = Vector2(128, -472)

[node name="Spawn11" parent="Spawns" instance=ExtResource("4")]
position = Vector2(192, -472)

[node name="Spawn12" parent="Spawns" instance=ExtResource("4")]
position = Vector2(256, -472)

[node name="Spawn13" parent="Spawns" instance=ExtResource("4")]
position = Vector2(320, -472)

[node name="Spawn14" parent="Spawns" instance=ExtResource("4")]
position = Vector2(384, -472)

[node name="Spawn15" parent="Spawns" instance=ExtResource("4")]
position = Vector2(448, -472)

[node name="TimerSpawn" type="Timer" parent="."]
wait_time = 0.5

[node name="TimerNextWave" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="UI" parent="." instance=ExtResource("7")]

[node name="AP" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qtkw0")
}

[node name="NextWave" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
